--- a/index.html
+++ b/index.html
@@ -28,9 +28,224 @@
         </div>
     </header>
     <!-- / HEADER -->
+
     <!-- MAIN -->
+    <main class="container">
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+        <div class="img-center">
+            <span>
+                <i class="fas fa-microphone-slash"></i>
+                Pinco Pallo
+            </span>
+        </div>
+    </main>
     <!-- / MAIN -->
+
     <!-- FOOTER -->
+
     <!-- / FOOTER-->
 </body>
 
