--- a/index.html
+++ b/index.html
@@ -245,7 +245,11 @@
     <!-- / MAIN -->
 
     <!-- FOOTER -->
-
+    <footer>
+        <div class="footer-sx"></div>
+        <div class="footer-center"></div>
+        <div class="footer-dx"></div>
+    </footer>
     <!-- / FOOTER-->
 </body>
 
