--- a/index.html
+++ b/index.html
@@ -246,9 +246,74 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="footer-sx"></div>
-        <div class="footer-center"></div>
-        <div class="footer-dx"></div>
+        <div class="footer-sx">
+            <div>
+                <p class="icon-footer"><i class="fas fa-microphone"></i>
+                </p>
+                <span>Mute</span>
+            </div>
+
+            <div class="icon-arrow"><i class="fas fa-chevron-up"></i></div>
+
+            <div>
+                <p class="icon-footer"><i class="fas fa-video"></i>
+                </p>
+                <span>Stop Video</span>
+            </div>
+
+            <div class="icon-arrow"><i class="fas fa-chevron-up"></i></div>
+
+        </div>
+        <div class="footer-center">
+            <div>
+                <p class="icon-footer"><i class="fas fa-user-plus"></i>
+                </p>
+                <span>Invite</span>
+            </div>
+            <div>
+                <p class="icon-footer"><i class="fas fa-user-friends"></i>
+                </p>
+                <span>Manage Participants</span>
+            </div>
+            <div>
+                <p class="icon-footer"><i class="fas fa-chart-bar"></i>
+                </p>
+                <span>Polling</span>
+            </div>
+            <div>
+                <p class="icon-footer"><i class="fas fa-share-square"></i>
+                </p>
+                <span>Share Screen</span>
+            </div>
+
+            <div class="icon-arrow"><i class="fas fa-chevron-up"></i></div>
+
+            <div>
+                <p class="icon-footer"><i class="fas fa-comment"></i>
+                </p>
+                <span>Chat</span>
+            </div>
+            <div>
+                <p class="icon-footer"><i class="fas fa-record-vinyl"></i>
+                </p>
+                <span>Record</span>
+            </div>
+            <div>
+                <p class="icon-footer"><i class="fas fa-th-large"></i>
+                </p>
+                <span>Breakout Rooms</span>
+            </div>
+            <div>
+                <p class="icon-footer"><i class="fas fa-ellipsis-h"></i>
+                </p>
+                <span>More</span>
+            </div>
+
+        </div>
+        <div class="footer-dx">
+            <p>End Meeting</p>
+        </div>
+
     </footer>
     <!-- / FOOTER-->
 </body>
